--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -100,7 +100,7 @@
                 <label for="time">Preferred time</label>
                 <input type="time" id="time" placeholder="Select a time" name="time">
             </div>
-            <div>
+            <div class="field-wrapper">
                 <label for="designation">Department</label>
                 <select id="designation" name="department" required>
                     <option value="select">Select</option>
