--- a/templates/header.html
+++ b/templates/header.html
@@ -43,24 +43,12 @@
           <a class="nav-link" href="{% url 'about' %}">About </a>
         </li>
 
-		<li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Blog
-          </a>
-          <ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{% url 'blog' %}"><i class="fa fa-long-arrow-right font_14 me-1 align-middle"></i> Blog</a></li>
-            <li><a class="dropdown-item border-0" href="{% url 'blog_detail' %}"><i class="fa fa-long-arrow-right font_14 me-1 align-middle"></i> Blog Detail</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'blog' %}">Blog </a>
         </li>
 
-		<li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Team
-          </a>
-          <ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{% url 'team' %}"><i class="fa fa-long-arrow-right font_14 me-1 align-middle"></i> Team</a></li>
-            <li><a class="dropdown-item border-0" href="{% url 'team_detail' %}"><i class="fa fa-long-arrow-right font_14 me-1 align-middle"></i> Team Detail</a></li>
-          </ul>
+		<li class="nav-item">
+          <a class="nav-link" href="{% url 'team' %}">Team</a>
         </li>
 
 		<li class="nav-item">
