--- a/templates/index.html
+++ b/templates/index.html
@@ -167,28 +167,23 @@ eiusmod tempor incididunt ut labore et dolore</p>
 	<div class="col-md-3">
 	 <div class="work_h1i1 p-4 bg-white">
       <h1 class="font_100 lh-1">01</h1>
-	  <h5 class="mt-3">We Visit <br>
-You At Home</h5>
+	  <h5 class="mt-3">We Visit <br>You At Home</h5>
      <p class="mt-3">We will measure your kitchen, ask you questions and start the actual design process with you.</p>
-	 <h6 class="mb-0 mt-4 fw-bold"><a href="#">READ MORE</a></h6>
 	 </div>
 	</div>
 	<div class="col-md-3">
 	 <div class="work_h1i1 p-4 bg-white">
       <h1 class="font_100 lh-1">02</h1>
-	  <h5 class="mt-3">Preliminary
-Computer Designs</h5>
+	  <h5 class="mt-3">Preliminary Computer Designs</h5>
      <p class="mt-3">We will measure your kitchen, ask you questions and start the actual design process with you.</p>
-	 <h6 class="mb-0 mt-4 fw-bold"><a href="#">READ MORE</a></h6>
 	 </div>
 	</div>
 	<div class="col-md-3">
 	 <div class="work_h1i1 p-4 bg-white">
       <h1 class="font_100 lh-1">03</h1>
-	  <h5 class="mt-3">Begin The Detailed
-Design Process</h5>
+	  <h5 class="mt-3">Begin The Detailed Design Process</h5>
      <p class="mt-3">We will measure your kitchen, ask you questions and start the actual design process with you.</p>
-	 <h6 class="mb-0 mt-4 fw-bold"><a href="#">READ MORE</a></h6>
+
 	 </div>
 	</div>
    </div>
@@ -200,8 +195,8 @@ Design Process</h5>
     <div class="project_1 row text-center mb-4">
 	 <div class="col-md-12">
 	  <h6 class="col_yell fw-bold">OUR PROJECT</h6>
-	  <h1 class="text-white mt-3">Explore our kitchen designs</h1>
-	  <p class="mb-0 mt-3 col_light">Explore finished kitchens from some of our customers and see how they created their <br> dream kitchen while getting ideas for your own.</p>
+	  <h1 class="text-white mt-3">Explore our designs</h1>
+	  <p class="mb-0 mt-3 col_light">Explore finished designs from some of our customers and see how they created their <br> dream kitchen while getting ideas for your own.</p>
 	 </div>
 	</div>
 	 <div class="project_2 row">
@@ -220,7 +215,7 @@ Design Process</h5>
 					<a href="#"><img src="static/img/30a.jpg" class="w-100" alt="abc"></a>
 				  </figure>
 			  </div>
-			<h4 class="mt-3"><a class="text-white" href="#">Kitchen project 01</a></h4>
+			<h4 class="mt-3"><a class="text-white" href="#">Project 01</a></h4>
 			<h6 class="col_light mb-0 text-uppercase font_14 mt-3">
 			<a class="col_light" href="#">Modern</a> <span class="mx-1">/</span>
 			<a class="col_light" href="#">Coastal</a> <span class="mx-1">/</span>
@@ -235,7 +230,7 @@ Design Process</h5>
 					<a href="#"><img src="static/img/29a.jpg" class="w-100" alt="abc"></a>
 				  </figure>
 			  </div>
-			<h4 class="mt-3"><a class="text-white" href="#">Kitchen project 02</a></h4>
+			<h4 class="mt-3"><a class="text-white" href="#">Project 02</a></h4>
 			<h6 class="col_light mb-0 text-uppercase font_14 mt-3">
 			<a class="col_light" href="#">Modern</a> <span class="mx-1">/</span>
 			<a class="col_light" href="#">Coastal</a> <span class="mx-1">/</span>
@@ -250,7 +245,7 @@ Design Process</h5>
 					<a href="#"><img src="static/img/25a.jpg" class="w-100" alt="abc"></a>
 				  </figure>
 			  </div>
-			<h4 class="mt-3"><a class="text-white" href="#">Kitchen project 03</a></h4>
+			<h4 class="mt-3"><a class="text-white" href="#">Project 03</a></h4>
 			<h6 class="col_light mb-0 text-uppercase font_14 mt-3">
 			<a class="col_light" href="#">Modern</a> <span class="mx-1">/</span>
 			<a class="col_light" href="#">Coastal</a> <span class="mx-1">/</span>
@@ -365,7 +360,7 @@ Design Process</h5>
 	     <h6 class="col_yell fw-bold">PROMO VIDEO</h6>
 	  <h1 class="text-white mt-4">Ensuring a safe <br> experience from design <br> to installation</h1>
 	  <p class="mt-4 text-light">We’re following all protocols to ensure your safety and <br> vaccination drives are underway to ensure our employees <br> are ready to meet you safely.</p>
-	  <h6 class="mb-0 mt-4"><a class="button" href="#">MORE VIDEOS <i class="fa fa-long-arrow-right ms-1"></i></a></h6>
+<!--	  <h6 class="mb-0 mt-4"><a class="button" href="#">MORE VIDEOS <i class="fa fa-long-arrow-right ms-1"></i></a></h6>-->
 	  </div>
 	 </div>
 	 <div class="col-md-6">
@@ -550,88 +545,88 @@ Design Process</h5>
 <section id="client" class="p_3 px-4 carousel_p">
  <div class="container-fluid">
     <div class="project_1 row mb-4 text-center">
-	 <div class="col-md-12">
-	  <h6 class="col_yell fw-bold">OUR CLIENTS</h6>
-	  <h1 class="mt-3 mb-0">Here's what our satisfied  <br> clients are saying</h1>
-	 </div>
+		 <div class="col-md-12">
+		  <h6 class="col_yell fw-bold">OUR CLIENTS</h6>
+		  <h1 class="mt-3 mb-0">Here's what our satisfied  <br> clients are saying</h1>
+		 </div>
+		</div>
+		<div class="testim_1 row">
+		  <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
+	  <div class="carousel-indicators">
+		<button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0" class="active" aria-label="Slide 1"></button>
+		<button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="1" aria-label="Slide 2" class="" aria-current="true"></button>
+	  </div>
+	  <div class="carousel-inner">
+		<div class="carousel-item active">
+		   <div class="testim_1i row">
+			<div class="col-md-4">
+			 <div class="testim_1i1 bg-light p-4 clearfix">
+			 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
+			 <div class="testim_1i1i clearfix mt-3">
+			   <span><img src="{% static 'img/team/t4.jpg' %}" alt="abc" class="rounded-circle me-3 float-start"></span>
+			   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Eget Nulla <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
+			   </div>
+			   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+			 </div>
+			</div>
+			<div class="col-md-4">
+			 <div class="testim_1i1 bg-light p-4 clearfix">
+			 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
+			 <div class="testim_1i1i clearfix mt-3">
+			   <span><img src="{% static 'img/team/t3.jpg' %}" alt="abc" class="rounded-circle me-3 float-start"></span>
+			   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Lorem Porta <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
+			   </div>
+			   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+			 </div>
+			</div>
+			<div class="col-md-4">
+			 <div class="testim_1i1 bg-light p-4 clearfix">
+			 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
+			 <div class="testim_1i1i clearfix mt-3">
+			   <span><img src="{% static 'img/team/t1.jpg' %}" alt="abc" class="rounded-circle me-3 float-start"></span>
+			   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Dolor Amet <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
+			   </div>
+			   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+			 </div>
+			</div>
+		   </div>
+		</div>
+		<div class="carousel-item">
+			<div class="testim_1i row">
+			<div class="col-md-4">
+			 <div class="testim_1i1 bg-light p-4 clearfix">
+			 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
+			 <div class="testim_1i1i clearfix mt-3">
+			   <span><img src="{% static 'img/team/t2.jpg' %}" alt="abc" class="rounded-circle me-3 float-start"></span>
+			   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Eget Nulla <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
+			   </div>
+			   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+			 </div>
+			</div>
+			<div class="col-md-4">
+			 <div class="testim_1i1 bg-light p-4 clearfix">
+			 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
+			 <div class="testim_1i1i clearfix mt-3">
+			   <span><img src="{% static 'img/team/t4.jpg' %}" alt="abc" class="rounded-circle me-3 float-start"></span>
+			   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Lorem Porta <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
+			   </div>
+			   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+			 </div>
+			</div>
+			<div class="col-md-4">
+			 <div class="testim_1i1 bg-light p-4 clearfix">
+			 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
+			 <div class="testim_1i1i clearfix mt-3">
+			   <span><img src="{% static 'img/team/t3.jpg' %}" alt="abc" class="rounded-circle me-3 float-start"></span>
+			   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Dolor Amet <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
+			   </div>
+			   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+			 </div>
+			</div>
+		   </div>
+		</div>
+	  </div>
 	</div>
-    <div class="testim_1 row">
-	  <div id="carouselExampleCaptions2" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="0" class="active" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions2" data-bs-slide-to="1" aria-label="Slide 2" class="" aria-current="true"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-       <div class="testim_1i row">
-	    <div class="col-md-4">
-		 <div class="testim_1i1 bg-light p-4 clearfix">
-		 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
-		 <div class="testim_1i1i clearfix mt-3">
-		   <span><img src="img/15.jpg" alt="abc" class="rounded-circle me-3 float-start"></span>
-		   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Eget Nulla <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
-		   </div>
-		   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-		 </div>  
-		</div>
-		<div class="col-md-4">
-		 <div class="testim_1i1 bg-light p-4 clearfix">
-		 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
-		 <div class="testim_1i1i clearfix mt-3">
-		   <span><img src="img/16.jpg" alt="abc" class="rounded-circle me-3 float-start"></span>
-		   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Lorem Porta <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
-		   </div>
-		   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-		 </div>  
-		</div>
-		<div class="col-md-4">
-		 <div class="testim_1i1 bg-light p-4 clearfix">
-		 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
-		 <div class="testim_1i1i clearfix mt-3">
-		   <span><img src="img/17.jpg" alt="abc" class="rounded-circle me-3 float-start"></span>
-		   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Dolor Amet <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
-		   </div>
-		   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-		 </div>  
-		</div>
-	   </div>
-    </div>
-    <div class="carousel-item">
-        <div class="testim_1i row">
-	    <div class="col-md-4">
-		 <div class="testim_1i1 bg-light p-4 clearfix">
-		 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
-		 <div class="testim_1i1i clearfix mt-3">
-		   <span><img src="img/15.jpg" alt="abc" class="rounded-circle me-3 float-start"></span>
-		   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Eget Nulla <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
-		   </div>
-		   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-		 </div>  
-		</div>
-		<div class="col-md-4">
-		 <div class="testim_1i1 bg-light p-4 clearfix">
-		 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
-		 <div class="testim_1i1i clearfix mt-3">
-		   <span><img src="img/16.jpg" alt="abc" class="rounded-circle me-3 float-start"></span>
-		   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Lorem Porta <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
-		   </div>
-		   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-		 </div>  
-		</div>
-		<div class="col-md-4">
-		 <div class="testim_1i1 bg-light p-4 clearfix">
-		 <span class="d-inline-block bg_yell text-white text-center span_1 rounded-circle"><i class="fa fa-quote-left"></i></span>
-		 <div class="testim_1i1i clearfix mt-3">
-		   <span><img src="img/17.jpg" alt="abc" class="rounded-circle me-3 float-start"></span>
-		   <h6 class="mb-0 fw-bold text-uppercase lh-base"> Dolor Amet <br> <span class="col_yell font_14 fw-normal">MARKETING MANAGER</span></h6>
-		   </div>
-		   <p class="mb-0 mt-3">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-		 </div>  
-		</div>
-	   </div>
-    </div>
-  </div>
-</div>
 	</div>
  </div>
 </section>
@@ -696,7 +691,7 @@ Design Process</h5>
 		 <div class="blog_1m">
             <div class="grid clearfix">
 				  <figure class="effect-jazz mb-0">
-					<a href="#"><img src="img/19.jpg" class="w-100" alt="abc"></a>
+					<a href="#"><img src="static/img/25a.jpg" class="w-100" alt="abc"></a>
 				  </figure>
 			  </div>
 			   <h6 class="font_14 text-muted mt-3"><i class="fa fa-user col_yell me-1"></i> By Admin
@@ -710,7 +705,7 @@ Design Process</h5>
 		 <div class="blog_1m">
             <div class="grid clearfix">
 				  <figure class="effect-jazz mb-0">
-					<a href="#"><img src="img/20.jpg" class="w-100" alt="abc"></a>
+					<a href="#"><img src="static/img/26a.jpg" class="w-100" alt="abc"></a>
 				  </figure>
 			  </div>
 			   <h6 class="font_14 text-muted mt-3"><i class="fa fa-user col_yell me-1"></i> By Admin
@@ -724,7 +719,7 @@ Design Process</h5>
 		 <div class="blog_1m">
             <div class="grid clearfix">
 				  <figure class="effect-jazz mb-0">
-					<a href="#"><img src="img/21.jpg" class="w-100" alt="abc"></a>
+					<a href="#"><img src="static/img/27a.jpg" class="w-100" alt="abc"></a>
 				  </figure>
 			  </div>
 			   <h6 class="font_14 text-muted mt-3"><i class="fa fa-user col_yell me-1"></i> By Admin
